<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.JadwalFragment">

<!--  Item Pondasi  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="5dp">

        <!--  item Tulisan welcome  -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/hijau"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <!-- Text di kiri -->
                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:textColor="@color/black"
                    android:text="@string/textWelcomeJadwalHome"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <!-- Image di paling kanan -->
                <ImageView
                    android:id="@+id/imageShalat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/img_shalat"
                    android:contentDescription="Ikon Aplikasi"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--    Text paragraf 2    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitleJadwal"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/akaya_kanadaka"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/baseline_location"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/akaya_kanadaka"
                        android:text="@string/textNamaMasjid"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkboxNotifikasiAzan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:buttonTint="@color/hijau"/>

            </LinearLayout>

        </LinearLayout>

        <!--    Bingkai card salat shubuh    -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/hijau"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textShubuh"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <!--  Waktu salat shubuh  -->
                    <TextView
                        android:id="@+id/shubuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginEnd="5dp"
                        android:text="00.00"
                        android:textColor="@color/black"
                        android:fontFamily="@font/amaranth"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="10dp"
                        android:text="wib"
                        android:fontFamily="@font/akaya_kanadaka"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--    Bingkai card salat Dzuhur    -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/hijau"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/textDzuhur"
                    android:textSize="22sp"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <!--  Waktu salat dzuhur  -->
                    <TextView
                        android:id="@+id/dzuhur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="end"
                        android:layout_marginEnd="5dp"
                        android:text="00.00"
                        android:fontFamily="@font/amaranth"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="wib"
                        android:fontFamily="@font/akaya_kanadaka"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--    Bingkai card salat Ashar    -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/hijau"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/textAshar"
                    android:textSize="22sp"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <!--  Waktu salat ashar  -->
                    <TextView
                        android:id="@+id/ashar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="end"
                        android:layout_marginEnd="5dp"
                        android:text="00.00"
                        android:fontFamily="@font/amaranth"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="10dp"
                        android:text="wib"
                        android:textColor="@color/black"
                        android:fontFamily="@font/akaya_kanadaka"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--    Bingkai card salat Maghrib    -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/hijau"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textMaghrib"
                    android:textSize="22sp"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <!--  Waktu salat maghrib  -->
                    <TextView
                        android:id="@+id/maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:text="00.00"
                        android:fontFamily="@font/amaranth"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="10dp"
                        android:text="wib"
                        android:textColor="@color/black"
                        android:fontFamily="@font/akaya_kanadaka"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--    Bingkai card salat Isya    -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/hijau"
            android:layout_marginBottom="15dp"
            app:strokeWidth="1dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textIsya"
                    android:textSize="22sp"
                    android:fontFamily="@font/akaya_kanadaka"
                    android:layout_gravity="start"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <!--  Waktu salat isya  -->
                    <TextView
                        android:id="@+id/isya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_marginEnd="5dp"
                        android:text="00.00"
                        android:fontFamily="@font/amaranth"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="10dp"
                        android:text="wib"
                        android:textColor="@color/black"
                        android:fontFamily="@font/akaya_kanadaka"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>